# PetaLinux

./: README.md  petalinux-config  petalinux-create  settings.csh  settings.sh
etc/libs/: petalinuxcorelibs.py
libs/: bitbake_utils.py  common_utils.py  config_component.py  create_component.py  logger_setup.py  plnx_utils.py  project_setup.py
licenses/: Petalinux_EULA.txt  Third_Party_Software_EULA.txt
scripts/: petalinux-boot  petalinux-build  petalinux-config  petalinux-create  petalinux-devtool  petalinux-package  petalinux-upgrade  petalinux-util
scripts/bash/: livetool_setup.sh  petalinux-boot  petalinux-detect-arch  petalinux-env-check  petalinux-qemu-boot
scripts/libs/: bitbake_utils.py  boot_common.py  boot_jtag.py  boot_qemu.py  common_utils.py  config_component.py  create_component.py  examples.py  gen_bootbin.py  gen_downloadbit.py  gen_mbbootbin.py  logger_setup.py  package_boot.py  package_bsp.py  package_common.py  package_prebuilt.py  package_sysroot.py  package_wic.py  plnx_utils.py  plnx_vars.py
templates/apps/template-autoconf/: @appname@.bb  README
templates/apps/template-autoconf/files/@appname@/: AUTHORS  Makefile.am  README  THANKS  configure.ac
templates/apps/template-autoconf/files/@appname@/doc/: @appname@.man  Makefile.am
templates/apps/template-autoconf/files/@appname@/src/: @appname@.c  Makefile.am
templates/apps/template-c/: @appname@.bb
templates/apps/template-c++/: @appname@.bb  README
templates/apps/template-dfx_dtg_versal_full/: @appname@.bb  README
templates/apps/template-dfx_dtg_versal_partial/: @appname@.bb  (+1 more)
(+38 files in other folders)
