AC_INIT([hello world program], [1.0],       [Ima Koder <hello-maintainer@fake.org>], [@appname@])
AC_CONFIG_SRCDIR([src/@appname@.c])
AC_CONFIG_HEADER([config.h])
AC_CHECK_HEADER([stdio.h])
AC_REVISION([: 1.0 $])
AM_INIT_AUTOMAKE
AC_PROG_CC
AC_PROG_INSTALL
AC_CONFIG_FILES([Makefile doc/Makefile src/Makefile])
AC_OUTPUT
